# flask-application-template

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/actions/python-tests/: action.yml
.github/workflows/: branch-cleanup.yml  cd.yml  deploy-docs.yml
app/: __init__.py
app/healthcheck/: __init__.py  routes.py
app/lib/: __init__.py  api.py  cache.py  context_processor.py  template_filters.py
app/main/: routes.py
app/site/: routes.py
app/templates/: alpha.html  base.html  beta.html
app/templates/components/: header.html
app/templates/errors/: api.html  page-not-found.html  server.html
app/templates/main/: cookies.html  index.html
test/healthcheck/: test_healthcheck_routes.py
test/main/: test_main_routes.py  test_routes.py
