[tool.poetry]
name = "tna-flask-application"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
requests = "^2.31.0"
flask-caching = "^2.1.0"
tna-frontend-jinja = "0.36.0"
tna-utilities = {version = "1.4.0rc1", extras = ["flask"]}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]
